<resources>
    <string name="app_name">Java School</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email address</string>
    <string name="invalid_password">Password must be more then 7 characters</string>
    <string name="not_eql_password">Passwords to not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Registration failed"</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="age">age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="not_a_number">Not a number</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_on">Sign on</string>
    <string name="title_activity_test">TestAct</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">Java School</string>
    <string name="profile">Profile</string>
    <string name="tests">Tests</string>
    <string name="modules">Modules</string>
    <string name="store">Store</string>
    <string name="bot_modules">Modules</string>
    <string name="bot_tests">Tests</string>
    <string name="bot_store">Modules Store</string>
    <string name="bot_profile">Your profile</string>
    <string name="power_points">power points</string>
    <string name="lesson_count">lesson count</string>
    <string name="complexity">complexity</string>
    <string name="tests_for">Tests for</string>
    <string name="coint_of_tasks">Количество заданий</string>
    <string name="image_for_question">Image for question</string>
    <string name="check_result_of_test">Узнать результат</string>
    <string name="download_img">Загрузить модуль</string>
    <string name="module_img">Картинка модуля</string>
    <string name="_100">100</string>
    <string name="logout">Logout</string>
    <string name="login_with_test_user">Login as user without data</string>
    <string name="login_as_user_with_data">Login as user with data</string>
</resources>
